--- a/src/main/resources/templates/userinfo/signup.html
+++ b/src/main/resources/templates/userinfo/signup.html
@@ -17,8 +17,8 @@
 	<link rel="stylesheet" href="/css/main/custom.css">
 	<link rel="stylesheet" href="/css/main/sidebar.css">
 	<link rel="stylesheet" href="/css/styles.css">
-	<meta name="_csrf_header" th:content="${_csrf.headerName}">
-	<meta name="_csrf" th:content="${_csrf.token}">
+<!--	<meta name="_csrf_header" th:content="${_csrf.headerName}">
+	<meta name="_csrf" th:content="${_csrf.token}"> -->
 </head>
 
 <body>
