--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -13,7 +13,8 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 	<meta name="author" content="">
-
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
 	<!--font start-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,6 +38,12 @@
 </head>
 
 <body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
 	<!-- Start Main Top -->
 	<header class="main-header">
@@ -129,7 +136,7 @@
 								style="font-size: 10pt; padding-right: 0px;">|</a></liclass="nav-item">
 						<li class="nav-item"><a href="/userinfo/signup"
 								style="font-size: 10pt; padding-right: 0px;">회원가입</a></li>
-						<li class="nav-item"><a href="/shop/cart">
+						<li class="nav-item"><a href="/userinfo/login">
 								<i class="fa fa-shopping-bag"></i>
 
 						</li>
@@ -145,7 +152,7 @@
 						<li class="nav-item"><a href="/userinfo/logout"
 								style="font-size: 10pt; padding-right: 0px;">로그아웃</a></li>
 
-						<li class="nav-item"><a href="/shop/cart">
+						<li class="nav-item"><a th:href="@{'/shop/cart/'+${session.u.userno}}">
 								<i class="fa fa-shopping-bag"></i>
 
 						</li>
@@ -273,6 +280,11 @@
 			offcanvas.show();
 		});
 	</script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 </body>
 
 </html>
