--- a/src/main/resources/templates/userinfo/login.html
+++ b/src/main/resources/templates/userinfo/login.html
@@ -18,12 +18,20 @@
 	<link rel="stylesheet" href="/css/userinfo/userinfo.css">
 	<link rel="stylesheet" href="/css/styles.css">
 	<meta name="_csrf_header" th:content="${_csrf.headerName}">
-	<meta name="_csrf" th:content="${_csrf.token}"> 
+	<meta name="_csrf" th:content="${_csrf.token}">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"> </script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<script type="text/javascript" src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	<script type="text/javascript" src="/js/userinfo/login.js?ver=220610"></script>
 
 </head>
 
 <body>
-
+	
+	
+	
+	
 	<div th:include="./main/header.html"></div>
 	<div class="container">
 
@@ -61,8 +69,7 @@
 						</div>
 					</div>
 					<div class="mb-3 justify-content-center">
-						<button class="btn submit-btn custom-btn" type="button" id="btn-login"
-							onclick="submitForm()">로그인</button>
+						<button class="btn submit-btn custom-btn" type="button" id="btn-login"onclick="submitForm()">로그인</button>
 					</div>
 				</form>
 
@@ -218,13 +225,6 @@
 		</div>
 		<div th:include="./main/footer.html"></div>
 
-		<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-			</script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-		<script src="/js/userinfo/login.js"></script>
 
 </body>
 
