[Wearth1.0] 8월 14일 관리자페이지 회원추가 작업본

--- a/src/main/resources/templates/admin/Container/User/ContainerUserList.html
+++ b/src/main/resources/templates/admin/Container/User/ContainerUserList.html
@@ -74,7 +74,7 @@
                             </ul>
                         </div>
                     </div>
-
+ㅊ
 
                     <button>
                         검색
@@ -256,6 +256,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary-delete" th:data-user-id="${user.userno}">수 정</button>
                             <button type="button" class="btn btn-primary-delete" th:data-user-id="${user.userno}">삭 제</button>
                         </div>
                     </div>
