[Wearth1.0] 8월 14일 관리자페이지 회원추가, 수정 완성, 대시보드 통계표시 회원수, 봉사하기, 강연하기, 교육하기

--- a/src/main/resources/templates/admin/Container/DashBoard/ContainerDashBoard.html
+++ b/src/main/resources/templates/admin/Container/DashBoard/ContainerDashBoard.html
@@ -31,7 +31,7 @@
                         <div class="col-md-total-list">
                             회원 수
                             <div class="col-total-circle">
-                                <span class="col-total-static">2,000</span>
+                                <span th:text="${totalUser}" class="col-total-static" ></span>
                             </div>
                         </div>
                         <div class="col-md-total-list">
@@ -43,19 +43,19 @@
                         <div class="col-md-total-list">
                             봉사하기
                             <div class="col-total-circle">
-                                <span class="col-total-static">2,000</span>
+                                <span th:text="${totalVolunteer}" class="col-total-static"></span>
                             </div>
                         </div>
                         <div class="col-md-total-list">
                             강연하기
                             <div class="col-total-circle">
-                                <span class="col-total-static">2,000</span>
+                                <span th:text="${totalLecture}" class="col-total-static"></span>
                             </div>
                         </div>
                         <div class="col-md-total-list">
                             교육하기
                             <div class="col-total-circle">
-                                <span class="col-total-static">2,000</span>
+                                <span th:text="${totalEducation}" class="col-total-static"></span>
                             </div>
                         </div>
                     </div>
