--- a/src/main/resources/templates/admin/Container/User/ContainerUserList.html
+++ b/src/main/resources/templates/admin/Container/User/ContainerUserList.html
@@ -154,7 +154,6 @@
         <!-- 체크박스에 표시되어 있는 계정을 삭제함 -->
         <button class = "btn btn-primary-delete-user" disabled > 삭 제 </button>
 
-
         <!-- Insert Modal -->
         <div class="modal fade" id="insertModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-hidden="true">
             <div class="modal-dialog">
@@ -205,26 +204,8 @@
 
                             <div class="form-group">
                                 <label for="inputResidence">거주지</label>
-                                <select class="form-control" id="inputResidence" name="residence" required>
-                                    <option value="">선택하세요</option>
-                                    <option value="서울특별시">서울특별시</option>
-                                    <option value="부산광역시">부산광역시</option>
-                                    <option value="대구광역시">대구광역시</option>
-                                    <option value="인천광역시">인천광역시</option>
-                                    <option value="광주광역시">광주광역시</option>
-                                    <option value="대전광역시">대전광역시</option>
-                                    <option value="울산광역시">울산광역시</option>
-                                    <option value="세종특별자치시">세종특별자치시</option>
-                                    <option value="경기도">경기도</option>
-                                    <option value="강원도">강원도</option>
-                                    <option value="충청북도">충청북도</option>
-                                    <option value="충청남도">충청남도</option>
-                                    <option value="전라북도">전라북도</option>
-                                    <option value="전라남도">전라남도</option>
-                                    <option value="경상북도">경상북도</option>
-                                    <option value="경상남도">경상남도</option>
-                                    <option value="제주특별자치도">제주특별자치도</option>
-                                </select>
+                                <input type="text" class="form-control" id="inputResidence" name="Residence" placeholder="필수입력입니다" required>
+
                             </div>
                             <div class="form-group">
                                 <label for="inputPhoneNumber">핸드폰번호</label>
@@ -251,20 +232,22 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" th:id="'label-' + ${user.userno}" th:text="${user.u_name} + '님의 상세정보'">    </h1>
+                            <h1 class="modal-title fs-5" th:id="'label-' + ${user.userno}" th:text="${user.id} + '님의 상세정보'">    </h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <!-- 이름 -->
-                            <div th:text="'이름: ' + ${user.u_name}"></div>
                             <!-- 아이디 -->
                             <div th:text="'아이디: ' + ${user.id}"></div>
                             <!-- 비밀번호 -->
                             <div th:text="'비밀번호: ' + ${user.pwd}"></div>
+                            <!-- 이름 -->
+                            <div th:text="'이름: ' + ${user.u_name}"></div>
                             <!-- 생년월일 -->
                             <div th:text="'생년월일: ' + ${user.date_birth}"></div>
                             <!-- 성별 -->
                             <div th:text="'성별: ' + ${user.gender}"></div>
+                            <!-- 이메일 -->
+                            <div th:text="'닉네임: ' + ${user.email}"></div>
                             <!-- 닉네임 -->
                             <div th:text="'닉네임: ' + ${user.nickname}"></div>
                             <!-- 생성일자 -->
@@ -281,8 +264,78 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary-delete" th:data-user-id="${user.userno}">수 정</button>
+                            <button type="button" class="btn btn-primary-update" th:data-user-id="${user.userno}">수 정</button>
                             <button type="button" class="btn btn-primary-delete" th:data-user-id="${user.userno}">삭 제</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Update Modal -->
+        <div th:each="user : ${userList}">
+            <div class="modal fade" th:id="'updateModal-' + ${user.userno}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="'updateLabel-' + ${user.userno}" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" th:id="'updateLabel-' + ${user.userno}" th:text="${user.id} + '님 정보 수정'"></h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <!-- 입력 폼 -->
+                            <form th:id="'updateForm'+${user.userno}">
+                                <div class="form-group">
+                                    <label th:for="'updatePwd-'+${user.userno}">비밀번호</label>
+                                    <input type="password" class="form-control" th:id="'updatePwd-'+${user.userno}" name="pwd" required>
+                                </div>
+
+                                <div class="form-group">
+                                    <label th:for="'updateName-'+${user.userno}">이름</label>
+                                    <input type="text" class="form-control" th:id="'updateName-'+${user.userno}" name="name" th:value="${user.u_name}" required>
+                                </div>
+
+                                <div class="form-group">
+                                    <label th:for="'updateDateOfBirth-'+${user.userno}">생년월일</label>
+                                    <input type="date" class="form-control" th:id="'updateDateOfBirth-'+${user.userno}" name="dateOfBirth" th:value="${user.date_birth}" required>
+                                </div>
+
+                                <div class="form-group">
+                                    <label th:for="'updateGender-'+${user.userno}">성별</label>
+                                    <select class="form-select" th:id="'updateGender-'+${user.userno}" name="gender" th:value="${user.gender}" required>
+                                        <option value="M">남자</option>
+                                        <option value="F">여자</option>
+                                    </select>
+                                </div>
+
+                                <div class="form-group">
+                                    <label th:for="'updateEmail-'+${user.userno}">이메일</label>
+                                    <input type="text" class="form-control" th:id="'updateEmail-'+${user.userno}" name="email" th:value="${user.email}" required>
+                                </div>
+
+                                <div class="form-group">
+                                    <label th:for="'updateNickname-'+${user.userno}">닉네임</label>
+                                    <input type="text" class="form-control" th:id="'updateNickname-'+${user.userno}" name="nickname" th:value="${user.nickname}" required>
+                                </div>
+
+                                <div class="form-group">
+                                    <label th:for="'updateResidence-'+${user.userno}">거주지</label>
+                                    <input type="text" class="form-control" th:id="'updateResidence-'+${user.userno}" name="Residence" th:value="${user.residence}" required>
+                                </div>
+
+                                <div class="form-group">
+                                    <label th:for="'updatePhone-'+${user.userno}">핸드폰번호</label>
+                                    <input type="tel" class="form-control" th:id="'updatePhone-'+${user.userno}" name="phone" th:value="${user.phone}" required>
+                                </div>
+
+                                <div class="form-group">
+                                    <label th:for="'updatePoint-'+${user.userno}">포인트</label>
+                                    <input type="number" class="form-control" th:id="'updatePoint-'+${user.userno}" name="point" th:value="${user.point}" required>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                            <button type="button" class="btn btn-primary-save" th:data-user-id="${user.userno}">저장</button>
                         </div>
                     </div>
                 </div>
